create index file

--- a/public/res/index.html
+++ b/public/res/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html<%- cache ? ' manifest="cache.manifest"' : '' %>>
+<html>
 
     <head>
         <title>StackEdit – Editor</title>
@@ -14,16 +14,13 @@
         <meta name="msvalidate.01" content="5E47EE6F67B069C17E3CDD418351A612">
         <script>
             // Use ?debug to serve original JavaScript files instead of minified
-            window.baseDir = 'res';
-            if (!/(\?|&)debug($|&)/.test(location.search)) {
-                window.baseDir += '-min';
-            }
+            window.baseDir = '';
             window.require = {
                 baseUrl: window.baseDir,
                 deps: ['main']
             };
         </script>
-        <script src="res-min/require.js"></script>
+        <script src="require.js"></script>
     </head>
 
 <body>
