--- a/public/res/index.html
+++ b/public/res/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>StackEdit – Editor</title>
+        <link type="text/css" rel="stylesheet" href="styles/main.css">
+        <link type="text/css" rel="stylesheet" href="bower-libs/bootstrap/dist/css/bootstrap.css">
         <script>
             window.baseDir = '';
             window.require = {
