fix editor padding

--- a/public/res/index.html
+++ b/public/res/index.html
@@ -67,11 +67,8 @@
             </div>
         </div>
         <div class="layout-wrapper-l3">
-            <pre id="wmd-input" class="ui-layout-center form-control"><div class="editor-content" contenteditable=true></div><div class="editor-margin"></div></pre>
+            <pre id="wmd-input" class="ui-layout-center form-control"><div class="editor-content" contenteditable=true></div></pre>
             <div class="preview-panel">
-                <div class="layout-resizer layout-resizer-preview"></div>
-                <div class="layout-toggler layout-toggler-navbar btn btn-info" title="Toggle navigation bar"><i class="icon-th"></i></div>
-                <div class="layout-toggler layout-toggler-preview btn btn-info" title="Toggle preview"><i class="icon-none"></i></div>
                 <div class="preview-container">
                 </div>
             </div>
