remove extra wrappers

--- a/public/res/index.html
+++ b/public/res/index.html
@@ -15,43 +15,39 @@
     </head>
 
 <body>
-<div class="layout-wrapper-l1">
-    <div class="layout-wrapper-l2">
-        <div class="navbar navbar-default ui-layout-north">
-            <div class="navbar-inner">
-                <div class="nav left-space"></div>
-                <div class="nav right-space pull-right"></div>
-                <div class="buttons-dropdown dropdown">
-                    <div class="nav">
-                        <button class="btn btn-success" data-toggle="dropdown"
-                            title="Show buttons">
-                            <i class="icon-th-large"></i>
-                        </button>
-                        <div class="dropdown-menu">
-                        </div>
+<div class="layout-wrapper">
+    <div class="navbar navbar-default ui-layout-north">
+        <div class="navbar-inner">
+            <div class="nav left-space"></div>
+            <div class="nav right-space pull-right"></div>
+            <div class="buttons-dropdown dropdown">
+                <div class="nav">
+                    <button class="btn btn-success" data-toggle="dropdown"
+                        title="Show buttons">
+                        <i class="icon-th-large"></i>
+                    </button>
+                    <div class="dropdown-menu">
                     </div>
                 </div>
-                <ul class="nav left-buttons">
-                    <li class="wmd-button-group1 btn-group"></li>
-                </ul>
-                <ul class="nav left-buttons">
-                    <li class="wmd-button-group2 btn-group"></li>
-                </ul>
-                <ul class="nav left-buttons">
-                    <li class="wmd-button-group3 btn-group"></li>
-                </ul>
-                <ul class="nav left-buttons">
-                    <li class="wmd-button-group5 btn-group"></li>
-                </ul>
             </div>
-        </div>
-        <div class="layout-wrapper-l3">
-            <pre id="wmd-input" class="ui-layout-center form-control"><div class="editor-content" contenteditable=true></div></pre>
+            <ul class="nav left-buttons">
+                <li class="wmd-button-group1 btn-group"></li>
+            </ul>
+            <ul class="nav left-buttons">
+                <li class="wmd-button-group2 btn-group"></li>
+            </ul>
+            <ul class="nav left-buttons">
+                <li class="wmd-button-group3 btn-group"></li>
+            </ul>
+            <ul class="nav left-buttons">
+                <li class="wmd-button-group5 btn-group"></li>
+            </ul>
         </div>
     </div>
-    <div id="wmd-button-bar" class="hide"></div>
-</div>
 
+    <pre id="wmd-input" class="ui-layout-center form-control"><div class="editor-content" contenteditable=true></div></pre>
+</div>
+<div id="wmd-button-bar" class="hide"></div>
 
 <div class="modal fade modal-insert-link">
     <div class="modal-dialog">
