--- a/public/res/index.html
+++ b/public/res/index.html
@@ -4,14 +4,20 @@
 		<title>StackEdit – Editor</title>
 		<link type="text/css" rel="stylesheet" href="styles/main.css">
 		<link type="text/css" rel="stylesheet" href="bower-libs/bootstrap/dist/css/bootstrap.css">
-		<script>
-			window.baseDir = '';
-			window.require = {
-				baseUrl: window.baseDir,
-				deps: ['main']
-			};
-		</script>
-		<script src="require.js"></script>
+
+		<script src="bower-libs/jquery/jquery.js"></script>
+		<script src="bower-libs/underscore/underscore.js"></script>
+		<script src="bower-libs/mousetrap/mousetrap.js"></script>
+		<script src="bower-libs/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="libs/Markdown.Editor.js"></script>
+
+		<script src="bower-libs/prism/prism.js"></script>
+		<script src="bower-libs/prism/components/prism-core.js"></script>
+		<script src="bower-libs/prism/components/prism-markup.js"></script>
+		<script src="libs/prism-latex.js"></script>
+		<script src="libs/prism-markdown.js"></script>
+
+		<script src="bower-libs/google-diff-match-patch-js/diff_match_patch_uncompressed.js"></script>
 	</head>
 
 <body>
@@ -82,5 +88,8 @@
 		</div>
 	</div>
 </div>
+
+<script src="editor.js"></script>
+
 </body>
 </html>
