--- a/index.html
+++ b/index.html
@@ -10,63 +10,7 @@
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-<div class="layout-wrapper">
-	<div class="wmd-buttons">
-		<ul class="btn-group">
-		</ul>
-	</div>
-
-	<pre id="wmd-input" class="ui-layout-center form-control"><div class="editor-content" contenteditable=true></div></pre>
-</div>
-<div id="wmd-button-bar" class="hide"></div>
-
-<div class="modal fade modal-insert-link">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal"
-					aria-hidden="true">&times;</button>
-				<h2 class="modal-title">Hyperlink</h2>
-			</div>
-
-			<div class="modal-body">
-				<p>Please provide the link URL and an optional title:</p>
-				<div class="input-group">
-					<span class="input-group-addon"><span class="glyphicon glyphicon-globe"></span></span><input id="input-insert-link" type="text" class="col-sm-5 form-control" placeholder='http://example.com/ "optional title"' />
-				</div>
-			</div>
-
-			<div class="modal-footer">
-				<a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
-				<a href="#" class="btn btn-primary action-insert-link"
-					data-dismiss="modal">OK</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="modal fade modal-insert-image">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal"
-					aria-hidden="true">&times;</button>
-				<h2 class="modal-title">Image</h2>
-			</div>
-
-			<div class="modal-body">
-				<p>Please provide the image URL and an optional title:</p>
-				<div class="input-group">
-					<span class="input-group-addon"><i class="glyphicon glyphicon-picture"></i></span><input id="input-insert-image" type="text" class="col-sm-5 form-control" placeholder='http://example.com/image.jpg "optional title"' />
-				</div>
-			</div>
-
-			<div class="modal-footer">
-				<a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a> <a href="#" class="btn btn-primary action-insert-image" data-dismiss="modal">OK</a>
-			</div>
-		</div>
-	</div>
-</div>
+<div class="layout-wrapper" id="stackedit"></div>
 
 
 <link type="text/css" rel="stylesheet" href="main.css">
@@ -74,6 +18,14 @@
 <script src="prism-markdown.js"></script>
 <script src="Markdown.Editor.js"></script>
 <script src="editor.js"></script>
+
+
+<script>
+    var editor = $('#stackedit').stackedit();
+    editor.setValue('**salam**');
+    console.log(editor.getValue());
+</script>
+
 
 </body>
 </html>
